--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <div id="footer">
     <div class="wrapper">
         <div class="left footer-menu">
-            <span>&copy 2015, 3cixty. All rights reserved. This page was built using <a href="http://swagger.io">Swagger</a>.</span>
+            <span>&copy 2015, 3cixty. All rights reserved. <a href="../v2/privacy.jsp">Privacy Statement</a>, <a href="../v2/terms.html">Terms of use</a>. This page was built using <a href="http://swagger.io">Swagger</a>.</span>
                 </div>
                 </div>
                 </div>
