--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   
   .center-logo {
       /* height: 35px; */
-      background-image: url("./3cixty.png");
+      background-image: url("./expo.jpg");
       background-position: 50%;
   }
   
@@ -129,14 +129,14 @@
       right: 20px;
       /* height: 26px; */
       background-position: 100% 0;
-      background-image: url("./e015.png");
+      background-image: url("./EIT-Digital-Landscape.gif");
   }
   
   .left-logo {
       float: left;
       left: 20px;
       background-position: 0;
-      background-image: url("./ExploreMI360.png");
+      background-image: url("./3cixty.png");
   }
   
   .logos {
