--- a/3cixtyPlatformAPIs.html
+++ b/3cixtyPlatformAPIs.html
@@ -8,7 +8,7 @@
 	<link href="login/fontello.css" rel="stylesheet" type="text/css" media="screen">
 	<link href="login/landing.css" rel="stylesheet" type="text/css" media="screen">
 
-	<title>3cixty Platform APIs</title>
+	<title>3cixty Platform Developer APIs</title>
 </head>
 
 <body class="privacy-policy">
@@ -22,7 +22,7 @@
 	<section id="top-fold">
 		<div class="container">
 			<article class="content privacy-article">
-				<h2 class="privacy-title">3cixty Platform APIs</h2>
+				<h2 class="privacy-title">3cixty Platform Developer APIs</h2>
 				<span class="tag-desc"></span>
 				<p class="privacy-desc">3cixty APIs are defined in following categories.</p>
 				<br>
