--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>3cixty API docs</title>
+  <title>3cixty developer API docs</title>
   <link rel="icon" type="image/png" href="images/favicon.ico" sizes="32x32" />
   <link rel="icon" type="image/png" href="images/favicon.ico" sizes="16x16" />
   <link href='css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
