--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "https://dev.3cixty.com/apidocs/api.json";
+        url = "https://<host>/api.json";
       }
 
       // Pre load translate...
